--- a/style.css
+++ b/style.css
@@ -1,15 +1,98 @@
-h6 {
-    font-size: 0.625rem;
-    font-weight: normal;
-    line-height: 1;
-    color: #d3d3d4;
+@font-face{
+    src:url(BalooThambi-Regular.ttf);
+    font-family: Baloo;
 }
-h6.form__suggestion {
-    display: block;
-    font-size: 0.67em;
-    margin-block-start: 2.33em;
-    margin-block-end: 2.33em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+body{
+    width: 100%;
+    background-color: #131316;
+    font-family: "DINPro", sans-serif;
+}
+h3{
+    color: white;
+    background: #42424d;
+    padding-left: 30px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    text-transform: none;
+    float: left;
+    font-size: 0.875rem;
     font-weight: bold;
+    line-height: 1;
+    display: block;
+}
+a{
+    color: #d3d3d4;
+    text-decoration: none;
+}
+
+header.header--no-paragraph {
+    margin: 0 0 1.75rem 0;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 1.75rem;
+    margin-left: 0px;
+}
+h1 {
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 1;
+    color: white;
+}
+p.copy--form{
+    color: white;
+}
+.container--xsmall {
+    width: 27.5rem;
+    margin: 4.5rem auto 0 auto; 
+}
+.form__group .form__group__input, .form__group--error .form__group__input {
+    width: 100%;
+    height: 2.0625rem;
+    margin: 0;
+    padding: 0 1rem;
+    font-size: 0.75rem;
+    background: #3a3a44;
+    color: white;
+    border: 0.0625rem solid #3a3a44;
+    border-radius: 0;
+    outline: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+.form__group .form__group__password .form__group__password__input, .form__group--error .form__group__password .form__group__password__input {
+    width: 100%;
+    height: 2.0625rem;
+    margin: 0;
+    padding: 0 1rem;
+    font-size: 0.75rem;
+    background: #3a3a44;
+    color: white;
+    border: 0.0625rem solid #3a3a44;
+    border-radius: 0;
+    outline: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+.form__button--disabled {
+    opacity: 0.33;
+    cursor: not-allowed;
+}
+.form__button, .form__button--warning, .form__button--dangerous, .form__button--disabled {
+    min-width: 7.625rem;
+    height: 2.0625rem;
+    margin: 0;
+    padding: 0 1.75rem;
+    background: #1260f3;
+    color: white;
+    font-size: 0.75rem;
+    font-weight: bold;
+    text-align: center;
+    line-height: 2.0625rem;
+    letter-spacing: 0.058125rem;
+    border: 0;
+    border-radius: 0;
+    text-transform: uppercase;
+    outline: none;
+    cursor: pointer;
 }
