--- a/login.css
+++ b/login.css
@@ -1,6 +1,5 @@
-@font-face{
-    src:url(BalooThambi-Regular.ttf);
-    font-family: Baloo;
+article{
+    width: 300px;
 }
 body{
     width: 100%;
@@ -11,29 +10,34 @@ h3{
     color: white;
     background: #42424d;
     padding-left: 30px;
-    padding-top: 18px;
-    padding-bottom: 18px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     text-transform: none;
     float: left;
-    font-size: 0.875rem;
+    font-size: 1.125rem;
     font-weight: bold;
     line-height: 1;
     display: block;
+    margin: 0px;
 }
 a{
+    font-size: 0.875rem;
     color: #d3d3d4;
     text-decoration: none;
+    text-decoration-line: none;
+    text-decoration-style: initial;
+    text-decoration-color: initial;
 }
-
-header.header--no-paragraph {
-    margin: 0 0 1.75rem 0;
+.taskbar .taskbar_actions a{
+    color: white;
     margin-top: 0px;
-    margin-right: 0px;
-    margin-bottom: 1.75rem;
-    margin-left: 0px;
+    margin-right: 30px;
+    margin-bottom: 0px;
+    margin-left: 235px;
+    text-align: 0px;
 }
 h1 {
-    margin: 0;
+    margin: 0px;
     font-size: 2rem;
     font-weight: 400;
     line-height: 1;
@@ -41,12 +45,14 @@ h1 {
 }
 p.copy--form{
     color: white;
+    font-size: 0.75rem;
 }
-.container--xsmall {
+.login{
     width: 27.5rem;
-    margin: 4.5rem auto 0 auto; 
+    margin-left: 31rem;
+    margin-bottom: 100px;
 }
-.form__group .form__group__input, .form__group--error .form__group__input {
+.signin_group .signin_group_input, .signin_group--error .signin_group_input {
     width: 100%;
     height: 2.0625rem;
     margin: 0;
@@ -60,7 +66,7 @@ p.copy--form{
     -webkit-appearance: none;
     -moz-appearance: none;
 }
-.form__group .form__group__password .form__group__password__input, .form__group--error .form__group__password .form__group__password__input {
+.signin_group .signin_group_password .signin_group_password_input, .signin_group--error .signin_group_password .signin_group_password_input {
     width: 100%;
     height: 2.0625rem;
     margin: 0;
@@ -74,11 +80,11 @@ p.copy--form{
     -webkit-appearance: none;
     -moz-appearance: none;
 }
-.form__button--disabled {
+.form_button--disabled {
     opacity: 0.33;
     cursor: not-allowed;
 }
-.form__button, .form__button--warning, .form__button--dangerous, .form__button--disabled {
+.form_button, .form_button--disabled {
     min-width: 7.625rem;
     height: 2.0625rem;
     margin: 0;
@@ -95,4 +101,16 @@ p.copy--form{
     text-transform: uppercase;
     outline: none;
     cursor: pointer;
+}
+hr {
+    color: #d3d3d4;
+    display: block;
+    unicode-bidi: isolate;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 1px;
 }
