--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
+    margin: 0px;
+    padding: 0px;
     width: 98%;
     background: #131316;
     font-family: "DINPro", sans-serif;
@@ -21,10 +23,11 @@ body{
 }
 .taskbar_logo h3{
     text-transform: none;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: bold;
     line-height: 1;
     color: white;
+    padding-left: 20px;
 }
 .taskbar_chooses{
     display: flex;
@@ -32,7 +35,7 @@ body{
     height: 100%;
 }
 .taskbar_chooses_choose{
-    margin: auto 20px;
+    margin: auto 15px;
 }
 .taskbar_actions{
     display: flex;
@@ -42,21 +45,21 @@ body{
     height: 100%;
 }
 .taskbar_actions_actions{
-    margin: auto 25px;
-    padding-left: 15px; 
+    margin: auto 15px;
 
 }
 .taskbar_chooses .taskbar_chooses_choose a,.taskbar_actions a{
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #d3d3d4;
     text-decoration: none;
     text-decoration-line: none;
     text-decoration-style: initial;
     text-decoration-color: initial;
+    padding-right: 0px;
 }
 .taskbar_actions_actions a{
     color: white;
-    padding-right: 15px;
+    padding-right: 10px;
 }
 .login{
     width: 27.5rem;
@@ -69,10 +72,10 @@ h1 {
     font-weight: 400;
     line-height: 1;
     color: white;
-    padding-top: 135px;
+    padding-top: 115px;
 }
 p.copy--form{
-    color: white;
+    color: #d3d3d4;
     font-size: 0.75rem;
     padding-top: 16px;
 }
@@ -125,6 +128,10 @@ p.copy--form{
     text-transform: uppercase;
     outline: none;
     cursor: pointer;
+}
+h6 a{
+    color: white;
+    text-decoration: none;
 }
 hr {
     color: #d3d3d4;
